[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/red_beam.gd" type="Script" id=1]
[ext_resource path="res://art/weapons/red_beam.png" type="Texture" id=2]
[ext_resource path="res://art/weapons/red_beam_firing1.png" type="Texture" id=3]
[ext_resource path="res://art/weapons/red_beam_firing2.png" type="Texture" id=4]
[ext_resource path="res://art/weapons/red_beam_firing3.png" type="Texture" id=5]
[ext_resource path="res://art/weapons/red_beam_firing4.png" type="Texture" id=6]
[ext_resource path="res://art/weapons/red_beam_firing5.png" type="Texture" id=7]
[ext_resource path="res://art/weapons/red_beam_firing6.png" type="Texture" id=8]
[ext_resource path="res://art/weapons/red_beam_hitting1.png" type="Texture" id=9]
[ext_resource path="res://art/weapons/red_beam_hitting2.png" type="Texture" id=10]
[ext_resource path="res://art/weapons/red_beam_hitting3.png" type="Texture" id=11]
[ext_resource path="res://art/weapons/red_beam_hitting4.png" type="Texture" id=12]
[ext_resource path="res://art/weapons/red_beam_hitting5.png" type="Texture" id=13]
[ext_resource path="res://art/weapons/red_beam_hitting6.png" type="Texture" id=14]
[ext_resource path="res://sound/redbeam.ogg" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "firing",
"speed": 3.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "hitting",
"speed": 20.0
} ]

[node name="red_beam" type="RayCast2D"]

position = Vector2( 350, 200 )
enabled = false
exclude_parent = true
cast_to = Vector2( 0, 0 )
collision_mask = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="beam" type="Sprite" parent="." index="0"]

visible = false
position = Vector2( 50, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 8 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Visibility" ]

[node name="beam_firing" type="AnimatedSprite" parent="." index="1"]

visible = false
frames = SubResource( 1 )
animation = "firing"
_sections_unfolded = [ "Visibility" ]

[node name="beam_hitting" type="AnimatedSprite" parent="." index="2"]

visible = false
frames = SubResource( 2 )
animation = "hitting"
_sections_unfolded = [ "Visibility" ]

[node name="lifetime" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="charging" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 15 )
volume_db = -6.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]

[connection signal="timeout" from="charging" to="." method="_on_charging_timeout"]


